# rag-kristo

./: Dockerfile.rocm  HOW IT WORKS.md  README.md  docker-compose.yml  pyproject.toml  rag_slurm_vllm.py  rag_slurm_vllm.py.py  spesifikasi_aleleon.txt
wiki/: Komputasi_Python_dengan_Conda_Environment_User.txt  komputasi_python_venv_user.txt  metode_komputasi_efison.txt  mpi_aleleon_superkomputer.txt  tutorial_akun_trial_a6.txt
