[project]
name = "rag-kristo"
version = "0.1.0"
description = "percobaan untuk RAG L1 Efison HPC support"
authors = [
    {name = "Kristo Nova",email = "vista.indonesia@gmail.com"}
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-text-splitters (>=1.1.1,<2.0.0)",
    "langchain-huggingface (>=1.2.0,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-core (>=1.2.15,<2.0.0)",
    "langchain-openai (>=0.3.0,<1.0.0)",
    "sentence-transformers (>=3.0.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.13,<3.14"
